[SERVER] Updated docs and FTies
